# LensPairFinder

./: CLAUDE.md  PROJECT.md  SCRAPING_GUIDE.md  pyproject.toml  requirements.txt  run.py  run_web.py
docs/: index.html  lenses.json
lenspairfinder/: __init__.py  app.py
lenspairfinder/core/: models.py  optics.py  search.py
lenspairfinder/db/: database.py  importer.py  queries.py  schema.py  seed.py
lenspairfinder/gui/: database_panel.py  detail_panel.py  dialogs.py  input_panel.py  main_window.py  results_table.py
lenspairfinder/utils/: constants.py  formatting.py
lenspairfinder/web/: server.py
lenspairfinder/web/templates/: index.html
seed_data/: asphericon_lenses.csv  edmund_lenses.csv  newport_lenses.csv  schema.md  telaztec_lenses.csv  thorlabs_additional.csv  thorlabs_c_aspheres.csv  thorlabs_lenses.csv
tests/: test_optics.py  test_search.py
