[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lenspairfinder"
version = "0.1.0"
description = "Find commercial lens pairs for beam-expanding/reducing telescopes"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5",
    "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["lenspairfinder*"]
